--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -4,6 +4,9 @@ resources:
   - deployment.yaml
   - services.yaml
   - mysql.yaml
+  - postgres.yaml
+  - configmap.yaml
+  - ingress.yaml
 images:
   - name: inesmrad/soprahr-cicd-backend
     newTag: TAG_BACKEND
