--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -11,14 +11,14 @@ spec:
   - host: soprahr.local
     http:
       paths:
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: frontend
             port:
               number: 80
-      - path: /api/?(.*)
+      - path: /api
         pathType: Prefix
         backend:
           service:
