Professional ingress setup with dynamic URLs

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - services.yaml
 - mysql.yaml
 - configmap.yaml
+- frontend-ingress.yaml
 images:
 - name: inesmrad/soprahr-cicd-backend
   newTag: 1.0.0
