--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -11,5 +11,5 @@ data:
   JWT_SECRET: "oK27f39k13s6PVlwRKiJaGR1PU4IXN1M0YMQqgBovbyzaUuCHliC5Jr58f3rvI0"
   SHOW_SQL: "false"
   DDL_AUTO: "update"
-  CORS_ALLOWED_ORIGINS: http://192.168.49.243,http://localhost:4200,http://localhost:3000,http://192.168.49.2:30609
+  # CORS handled by Ingress - no need for backend CORS config
   RECAPTCHA_SECRET: "6Lc7-nMrAAAAAGvJa43LF0yoCk0n7Q7usCQ4hyIS"
