--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     app: backend
-  type: ClusterIP
+  type: ClusterIP  # Internal service - accessed via Ingress
   ports:
   - name: http
     port: 9009
@@ -20,7 +20,7 @@ metadata:
 spec:
   selector:
     app: frontend
-  type: ClusterIP
+  type: ClusterIP  # Internal service - accessed via Ingress
   ports:
   - name: http
     port: 80
