Add Prometheus monitoring with ServiceMonitor

--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -13,3 +13,7 @@ data:
   DDL_AUTO: "update"
   # CORS handled by Ingress - no need for backend CORS config
   RECAPTCHA_SECRET: "6Lc7-nMrAAAAAGvJa43LF0yoCk0n7Q7usCQ4hyIS"
+  # Prometheus Monitoring
+  MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE: "health,info,metrics,prometheus"
+  MANAGEMENT_ENDPOINT_PROMETHEUS_ENABLED: "true"
+  MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED: "true"
