Fix ServiceMonitor path for Kustomize

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - mysql.yaml
 - configmap.yaml
 - frontend-ingress.yaml
-- ../monitoring/servicemonitor.yaml
+- servicemonitor.yaml
 images:
 - name: inesmrad/soprahr-cicd-backend
   newTag: 1.0.0
