--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -3,10 +3,12 @@ kind: Service
 metadata:
   name: backend
   namespace: dev
+  labels:
+    release: prom          # <-- add this line
 spec:
   selector:
     app: backend
-  type: ClusterIP  # Internal service - accessed via Ingress
+  type: ClusterIP
   ports:
   - name: http
     port: 9009
