--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate          # <-- ici et uniquement ici
+    type: Recreate
   selector:
     matchLabels:
       app: mysql-db
@@ -53,13 +53,17 @@ spec:
         livenessProbe:
           exec:
             command: ["mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
-          initialDelaySeconds: 30
-          periodSeconds: 10
+          initialDelaySeconds: 60
+          timeoutSeconds: 5
+          periodSeconds: 15
+          failureThreshold: 5
         readinessProbe:
           exec:
             command: ["mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
-          initialDelaySeconds: 10
-          periodSeconds: 5
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
+          periodSeconds: 10
+          failureThreshold: 5
       volumes:
       - name: mysql-storage
         persistentVolumeClaim:
