--- a/k8s/servicemonitor.yaml
+++ b/k8s/servicemonitor.yaml
@@ -2,14 +2,18 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: backend-metrics
-  namespace: dev
+  namespace: monitoring  # Must be in monitoring namespace
   labels:
     release: prom
 spec:
   selector:
     matchLabels:
-      app: backend
+      app: backend  # This selects the Service in dev namespace
+  namespaceSelector:
+    matchNames:
+    - dev  # Look for services in dev namespace
   endpoints:
   - port: http
     path: /actuator/prometheus
-    interval: 15s
+    interval: 30s
+    scrapeTimeout: 10s
