--- a/argocd-apps/soprahr-app.yaml
+++ b/argocd-apps/soprahr-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: soprahr-backend
+  name: soprahr-app
   namespace: argocd
 spec:
   project: default
@@ -16,3 +16,7 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
+    - PrunePropagationPolicy=foreground
+    - PruneLast=true
